# fullstack

./: Dockerfile  Makefile  README.md  cloudbuild.yaml  eval_to_compare.py
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  main.js
frontend/src/: app.rs  lib.rs
